--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
     "vue-loader": "^14.2.1",
-    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.15",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11",
@@ -26,6 +25,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "json-server": "^0.13.0",
     "purecss": "^1.0.0",
     "vue": "^2.5.16",
     "vue-resource": "^1.5.1",
