--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "json-server": "^0.13.0",
     "purecss": "^1.0.0",
     "vue": "^2.5.16",
+    "vuex": "^3.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   }
